# python-gmft

./: Makefile  README.md  pyproject.toml
src/: app.py  detect.py  download.py  pdf.py
