[project]
name = "python-gmft"
version = "0.1.0"
description = ""
authors = [
    {name = "rayhankinan",email = "rayhankinan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "gmft (>=0.4.1,<0.5.0)",
    "streamlit (>=1.44.0,<2.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "pymupdf (>=1.25.4,<2.0.0)",
    "gmft-pymupdf @ git+https://github.com/conjuncts/gmft_pymupdf.git",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
